--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.3.4",
@@ -35,10 +36,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-async-storage": "^0.0.1",
     "react-native-axios": "^0.17.1",
     "react-native-gesture": "^0.2.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-heroicons": "^4.0.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -53,7 +56,7 @@
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "^52.0.5",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
